@@ -7,3 +7,8 @@ base
 
 ## CSRF
 
+
+# tomcat run OPTION
+```
+-server -XX:PermSize=64M -XX:MaxPermSize=128m -Xms128M -Xmx256M
+```
